WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314023
String replace early returns before checking for exception
https://bugs.webkit.org/show_bug.cgi?id=314023
Summary
String replace early returns before checking for exception
Shu-yu Guo
Reported
2026-05-04 15:04:32 PDT
rdar://176130767
Attachments
Add attachment
proposed patch, testcase, etc.
Shu-yu Guo
Comment 1
2026-05-04 15:06:24 PDT
Pull request:
https://github.com/apple/WebKit/pull/5171
Shu-yu Guo
Comment 2
2026-05-04 16:48:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64224
EWS
Comment 3
2026-05-05 10:00:48 PDT
Committed
312621@main
(d422a6fcc24e): <
https://commits.webkit.org/312621@main
> Reviewed commits have been landed. Closing PR #64224 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug