[JSC] String replace should release throw scope https://bugs.webkit.org/show_bug.cgi?id=314023 rdar://176130767

Reviewed by Mark Lam.

This PR fixes a bug where the call to tryReplaceOneCharUsingString succeeding
does not release the throw scope.

Test: JSTests/stress/string-replace-one-char-rope-exception-check.js

* JSTests/stress/string-replace-one-char-rope-exception-check.js: Added.
* Source/JavaScriptCore/runtime/StringPrototypeInlines.h:
(JSC::replace):

Canonical link: https://commits.webkit.org/312621@main